# EOMAJI-OpenEO-toolbox

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
eomaji/: utils.py
eomaji/utils/: date_selector.py  draw_utils.py  general_utils.py  process_era5.py  raster_utils.py
eomaji/workflows/: decision_tree_sharpener.py  meteo_preprocessing.py  prepare_data_cubes.py  sentinel2_preprocessing.py
notebooks/: datacube_in_context.ipynb  et_input_parameters.ipynb  et_tseb.ipynb  filepaths_in_context.ipynb  pydms.ipynb  pydms_example.ipynb  step1_prepare_data.ipynb  step2_pydms.ipynb  step3_et_input_parameters.ipynb  step4_et_tseb.ipynb
openeo_workflows/dms/: udf_datacube_context.py  udf_pass_filepaths.py
openeo_workflows/utils/: gdal_utils.py
workflows/pydms/: decision_tree_sharpener.py
