[project]
name = "eomaji"
version = "0.1.0"
description = "A Python package for EOMaji"
authors = [
    { name = "Marie Lund Larsen", email = "mlla@dhigroup.com" }
]
license = {text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.4",
    "scikit-learn>=1.5.2",
    "pyproj>=3.7.0",
    "scipy>=1.14.1",
    "openeo>=0.33.0",
    "numba==0.57.1",
    #"pydms @ git+https://github.com/radosuav/pyDMS.git"
]

[tool.uv]
name = "eomaji"
version = "0.1.0"
description = "A Python package for EOMaji"
authors = ["Marie Lund Larsen <mlla@dhigroup.com>"]
readme = "README.md"
packages = [
    { include = "./eomaji" }
]

[tool.uv.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

